--- a/config/settings.json
+++ b/config/settings.json
@@ -1,5 +1,5 @@
 {
-"OwnerNumber":"6289512545999", 
-"OwnerName":"Ramdani Official",
-"BotName":"Ramdani botz"
+"OwnerNumber":"6282146218274", 
+"OwnerName":"Rielgans Official",
+"BotName":"Riel botz"
 }
